Fixed stoptime graph not respecting the selected date boundries

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<div class="modal-body">
 				<p>
 					Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a> ( Send me a message with feedback or suggestions ;) )<br>
-					Version: <span id="currentappversion">20211021.1</span> <br>
+					Version: <span id="currentappversion">20211104.1</span> <br>
 					Release notes: <a href="https://github.com/Lefky/lefky.github.io/commits/master" target="_blank">Check the master branch on Github</a>
 				</p>
 			</div>
@@ -367,7 +367,7 @@
 					</div>
 				</div>
 				<p>
-					You can also zoom in to certain graphs by dragging the area you want to zoom in on.<br>
+					You can zoom in to certain graphs by dragging the area you want to zoom in on.<br>
 					Click right to reset the zoom level.
 				</p>
 				<div class="d-flex justify-content-center w-100 h-100">
@@ -412,7 +412,8 @@
 					<p class="mb-0">
 						Bugfixes
 						<ul>
-							<li></li>
+							<li>Made background javascript more conventional using javascript linting.</li>
+							<li>Fixed stoptime graph not respecting the selected date boundries.</li>
 						</ul>
 					</p>
 				</div>
