Add cumulative overtime reporting - bring colors dynamically in line with bootstrap colors

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<div class="modal-body">
 				<p>
 					Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a> ( Send me a message with feedback or suggestions ;) )<br>
-					Version: <span id="currentappversion">20211104.2</span> <br>
+					Version: <span id="currentappversion">20211214.1</span> <br>
 					Release notes: <a href="https://github.com/Lefky/lefky.github.io/commits/master" target="_blank">Check the master branch on Github</a>
 				</p>
 			</div>
@@ -380,6 +380,7 @@
 					<div id="OvertimeDays_div" class="w-50 d-inline-block"></div><div id="Hourschedules_div" class="w-50 d-inline-block"></div>
 				</div>
 				<div id="OvertimeDec_div"></div>
+				<div id="OvertimeCumulative_div"></div>
 				<div id="StartDec_div"></div>
 				<div id="StopDec_div"></div>
 				<div id="TotalDec_div"></div>
@@ -408,6 +409,12 @@
 					</p>
 					<p>
 						The provided sample data is now more up to date with the recent changes to the saved dataformat.
+					</p>
+					<p>
+						Added Cumulative overtime graph in reporting.
+					</p>
+					<p>
+						Brought colors in line by dynamically linking them to the theme colors.
 					</p>
 					<p class="mb-0">
 						Bugfixes
