--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 	  gtag('config', 'UA-160200625-1');
 	</script>
 	<!-- Bootstrap -->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" crossorigin="anonymous" defer>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+		<!-- Bootstrap dark mode (https://github.com/vinorodrigues/bootstrap-dark-5): add the Bootstrap-Dark-plugin Variant CSS -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-dark-plugin.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous" defer></script>
 	<!-- jquery -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js" defer></script>
@@ -33,6 +35,7 @@
 	<script type="text/javascript" src="js/editable_table.js" defer></script>
 	<script type="text/javascript" src="js/introduction.js" defer></script>
 	<script type="text/javascript" src="js/leaves.js" async></script>
+	<script type="text/javascript" src="js/dark_mode.js" defer></script><!-- Dark mode JS -->
 </head>
 <body>
 <!-- Modal HTML -->
@@ -46,7 +49,7 @@
 			<div class="modal-body">
 				<p>
 					Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a> ( Send me a message with feedback or suggestions ;) )<br>
-					Version: <span id="currentappversion">20220307.1</span> <br>
+					Version: <span id="currentappversion">20220502.1</span> <br>
 					Release notes: <a href="https://github.com/Lefky/lefky.github.io/commits/master" target="_blank">Check the master branch on Github</a>
 				</p>
 			</div>
@@ -145,7 +148,7 @@
 						</div>
 					</div>
 				</p>
-				<p>
+				<!--<p>
 					<h4>Reporting settings</h4>
 					Settings for the reporting view.
 					<p>
@@ -156,9 +159,27 @@
 							</select>
 						</div>
 					</p>
-				</p>
+				</p>-->
 				<p>
 					<h4>User interface</h4>
+					<!--<p class="mt-3 no-bottom-margin">
+						Dark mode:
+					</p>
+					<div class="row d-flex align-items-center mb-3">
+						<div class="col-1">
+							<div class="input-group d-flex justify-content-end align-items-center">
+								<label><i class="fas fa-sun fontsize150"></i></label>
+							</div>
+						</div>
+						<div class="w-f-90">
+							<div class="form-check form-switch-md form-switch ps-5">
+								<input type="checkbox" class="form-check-input checkneutral" id="dark_mode_toggle_btn">
+							</div>
+						</div>
+						<div class="col-2">
+							<label class="form-check-label" for="dark_mode_toggle_btn"><i class="fas fa-moon fontsize150"></i></label>
+						</div>
+					</div>-->
 					<p class="no-bottom-margin">
 						Select which different stats and options should be visible in the UI.
 					</p>
@@ -198,17 +219,17 @@
 						Breaktime input format:
 					</p>
 					<div class="row align-items-center">
-						<div class="col-2">
+						<div class="col-1">
 							<div class="input-group">
 								<label>Duration</label>
 							</div>
 						</div>
-						<div class="col-2">
+						<div class="w-f-90">
 							<div class="form-check form-switch-md form-switch ps-5">
 								<input type="checkbox" class="form-check-input checkneutral" id="breaktime_timeselection_option_timerange" onchange="breaktimeTimeselection();">
 							</div>
 						</div>
-						<div class="col-3">
+						<div class="col-2 p-0">
 							<label class="form-check-label" for="breaktime_timeselection_option_timerange">Time range</label>
 						</div>
 					</div>
@@ -404,9 +425,9 @@
 					You can zoom in to certain graphs by dragging the area you want to zoom in on.<br>
 					Click right to reset the zoom level.
 				</p>
-				<div class="d-flex justify-content-center w-100 h-100">
+				<!--<div class="d-flex justify-content-center w-100 h-100">
 					<div id="Workdays_div"></div>
-				</div>
+				</div>-->
 				<div class="d-flex justify-content-center w-100 h-100">
 					<div id="DaysRegisteredGauge_div" class="d-flex justify-content-center w-25"></div>
 					<div id="SumOvertimeGauge_div" class="d-flex justify-content-center w-25"></div>
@@ -439,24 +460,26 @@
 				<div class="col-lg-2 text-center py-1 px-4 my-auto">
 					<i class="far fa-exclamation-triangle fa-4x pulsate text-warning display-2"></i>
 				</div>
-				<div class="col-lg-8 py-1 px-4">
-					<p>
-						Improved memory management resulting in improved performance.
-					</p>
-					<p>
-						Added graph in the reporting section displaying the official workdays remaining.<br>
-						Also added a country selector in the settings to get the official holidays for your country to take into account during the calculation.
-					</p>
-					<p>
-						Added semi-automatic backup functionality.<br>
-						You still have to approve the download of this data because it wouldn't be safe if every website could just download files to your computer ;)<br>
-						But in settings you can now configure a recurrent time-schedule to backup your data.
+				<div class="col-lg-9 py-1 px-4">
+					<p class="mb-0">
+						Changes
+						<ul>
+							<li>
+								Added a temporary dark mode.<br>
+								Bootstrap is working on a fairly easy way to implement dark mode. Making it flexible and easy to handle.<br>
+								So for now a basic dark mode has been added to this project that only triggers depending on your OS settings.<br>
+								If your OS is set to a light or dark theme the app will respond accordingly. When it is set to auto the app will also automatically transition to the new mode.<br>
+								In a later stage I plan on making it possible to set a preference and/or manually switch between these modes.
+							</li>
+							<li>
+								Changed coloring to be more consistent. Only 1 definition of green, red, blue, ... exists now resulting in the same colors being used everywhere even after modifications.
+							</li>
+						</ul>
 					</p>
 					<p class="mb-0">
 						Bugfixes
 						<ul>
-							<li>Cumulative reporting graph didn't respect the timerange that was selected.</li>
-							<li>Automatic scheduled cleanup not executing.</li>
+							<li>Remove partly implemented features from being accessible. It remains to be seen if these will be added later or not.</li>
 						</ul>
 					</p>
 				</div>
@@ -577,8 +600,8 @@
 								<button id="btnedithistory" type="button" class="btn btn-outline-secondary fontsize60 ms-auto me-2 pb-1 px-2" data-bs-toggle="modal" data-bs-target="#modaledithistory"><i class="fas fa-edit"></i></button>
 							</div>
 							<div class="col d-flex justify-content-end">
-								<div id="historycontainer" class="my-3 me-2">
-									<div id="history" class="w-100"></div>
+								<div id="historycontainer" class="border my-3 me-2">
+									<div id="history" class="bg-secondary bg-opacity-10 w-100"></div>
 								</div>
 							</div>
 						</div>
@@ -653,6 +676,7 @@
 		</div>
 		<div class="col d-flex justify-content-end">
 			<div id="footer_button_group" class="btn-group align-self-center" role="group">
+				<!--<button title="Dark mode" type="button" id="dark_mode" class="btn btn-outline-secondary leftbtn footerbtn py-1 px-4"><i class="fas fa-moon"></i></button>-->
 				<button title="Reporting" type="button" class="btn btn-outline-secondary leftbtn footerbtn py-1 px-4" data-bs-toggle="modal" data-bs-target="#modalreporting"><i class="fas fa-chart-line"></i></button>
 				<button title="About" type="button" class="btn btn-outline-secondary middlebtn footerbtn py-1 px-4" data-bs-toggle="modal" data-bs-target="#modalabout"><i class="fas fa-info"></i></button>
 				<button title="Info" type="button" class="btn btn-outline-secondary middlebtn footerbtn py-1 px-4" data-bs-toggle="modal" data-bs-target="#modalinfo"><i class="fas fa-lightbulb"></i></button>
