Code consolidation / cleanup

--- a/index.html
+++ b/index.html
@@ -431,12 +431,12 @@
 					</div>
 				</div>
 				<div class="mb-3">
-					<button type="button" class="btn btn-primary my-1" id="reporting_weektodate">Week to date</button>
-					<button type="button" class="btn btn-primary my-1" id="reporting_previousweek">Previous week</button>
-					<button type="button" class="btn btn-primary my-1" id="reporting_monthtodate">Month to date</button>
-					<button type="button" class="btn btn-primary my-1" id="reporting_previousmonth">Previous month</button>
-					<button type="button" class="btn btn-primary my-1" id="reporting_yeartodate">Year to date</button>
-					<button type="button" class="btn btn-primary my-1" id="reporting_alltime">All time</button>
+					<button type="button" class="btn btn-outline-primary my-1" id="reporting_weektodate">Week to date</button>
+					<button type="button" class="btn btn-outline-primary my-1" id="reporting_previousweek">Previous week</button>
+					<button type="button" class="btn btn-outline-primary my-1" id="reporting_monthtodate">Month to date</button>
+					<button type="button" class="btn btn-outline-primary my-1" id="reporting_previousmonth">Previous month</button>
+					<button type="button" class="btn btn-outline-primary my-1" id="reporting_yeartodate">Year to date</button>
+					<button type="button" class="btn btn-outline-primary my-1" id="reporting_alltime">All time</button>
 				</div>
 				<p>
 					You can zoom in to certain graphs by dragging the area you want to zoom in on.<br>
