Convert momentjs script source to jsdelivr instead of a local file

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<!-- Custom Styles -->
 	<link href="css/bootstrap_specific_style.css" rel="stylesheet" defer>
 	<!-- Moment.js -->
-	<script type="text/javascript" src="js/moment.min.js" defer></script><!-- https://momentjs.com/docs -->
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/moment@2.29.3/min/moment.min.js" defer></script><!-- https://momentjs.com/docs -->
 	<!-- Custom scripting -->
 	<script type="text/javascript" src="js/javascript.js" defer></script>
 	<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js" defer></script>
