--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			<div class="modal-body">
 				<p>
 					Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a> (Send me a message with feedback or suggestions ;) )<br>
-					Version: <span id="currentappversion">20220609.2</span> <br>
+					Version: <span id="currentappversion">20220629.1</span> <br>
 					Release notes: <a href="https://github.com/Lefky/lefky.github.io/commits/master" target="_blank">Check the master branch on Github</a>
 				</p>
 			</div>
@@ -650,15 +650,21 @@
 						Changes
 						<ul>
 							<li>
+								On small screens the distinction between the footer and content is more clear for UX purposes.
+							</li>
+							<li>
 								Added cookie banner.<br>
 								Including the required <a href="#policy" data-bs-toggle="modal" data-bs-target="#modalpolicy">cookie policy</a> to be GDPR compliant (as far as it's needed for this since no data is being stored externally besides google analytics).
+							</li>
+							<li>
+								Converted history overview to actual timestamps instead of decimal numbers.
 							</li>
 						</ul>
 					</p>
 					<p class="mb-0">
 						Bugfixes
 						<ul>
-							<li></li>
+							<li>MomentJS code is now provided by a CDN for ease of use in the backend.</li>
 						</ul>
 					</p>
 				</div>
