Adjust cookie banner z-index

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			<div class="modal-body">
 				<p>
 					Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a> (Send me a message with feedback or suggestions ;) )<br>
-					Version: <span id="currentappversion">20220629.1</span> <br>
+					Version: <span id="currentappversion">20220709.1</span> <br>
 					Release notes: <a href="https://github.com/Lefky/lefky.github.io/commits/master" target="_blank">Check the master branch on Github</a>
 				</p>
 			</div>
@@ -665,6 +665,7 @@
 						Bugfixes
 						<ul>
 							<li>MomentJS code is now provided by a CDN for ease of use in the backend.</li>
+							<li>When importing data parameters are now also automatically set.</li>
 						</ul>
 					</p>
 				</div>
