Add option to make hourschedule change temporary or permanent

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			<div class="modal-body">
 				<p>
 					Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a> (Send me a message with feedback or suggestions ;) )<br>
-					Version: <span id="currentappversion">20220905.1</span> <br>
+					Version: <span id="currentappversion">20221020.1</span> <br>
 					Release notes: <a href="https://github.com/Lefky/lefky.github.io/commits/master" target="_blank">Check the master branch on Github</a>
 				</p>
 			</div>
@@ -642,6 +642,22 @@
 	</div>
 </div>
 
+<div id="modalconfirm" class="modal fade" tabindex="-1">
+	<div class="modal-dialog">
+		<div class="modal-content px-2">
+			<div class="modal-header">
+				<h2>Confirm</h2>
+				<button type="button" class="btn float-end" data-bs-dismiss="modal"><i class="fas fa-times float-end"></i></button>
+			</div>
+			<div class="modal-body"></div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-success" data-bs-dismiss="modal">Yes</button>
+				<button type="button" class="btn btn-danger" data-bs-dismiss="modal">No</button>
+			</div>
+		</div>
+	</div>
+</div>
+
 <!-- Page HTML -->
 <div class="container-fluid h-100">
 	<div id="alertcontainer" class="row d-flex justify-content-center">
@@ -659,6 +675,12 @@
 							</li>
 							<li>
 								Added a day summary to saved data. This allows for better tracking and to add notes to your registrations.
+							</li>
+							<li>
+								Added a new easter egg when your day is done.
+							</li>
+							<li>
+								Added option to make hourschedule change temporary or permanent.
 							</li>
 						</ul>
 					</p>
