--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 	  gtag('config', 'UA-160200625-1');
 	</script>-->
 	<!-- Bootstrap -->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 		<!-- Bootstrap dark mode (https://github.com/vinorodrigues/bootstrap-dark-5): add the Bootstrap-Dark-plugin Variant CSS -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-dark-plugin.min.css" rel="stylesheet">
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous" defer></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous" defer></script>
 	<!-- Glow Cookies -->
 	<script src="https://cdn.jsdelivr.net/gh/manucaralmo/GlowCookies@3.1.7/src/glowCookies.min.js"></script>
 	<script>
@@ -62,7 +62,7 @@
 			<div class="modal-body">
 				<p>
 					Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a> (Send me a message with feedback or suggestions ;) )<br>
-					Version: <span id="currentappversion">20221020.1</span> <br>
+					Version: <span id="currentappversion">20221206.1</span> <br>
 					Release notes: <a href="https://github.com/Lefky/lefky.github.io/commits/master" target="_blank">Check the master branch on Github</a>
 				</p>
 			</div>
@@ -682,12 +682,15 @@
 							<li>
 								Added option to make hourschedule change temporary or permanent.
 							</li>
+							<li>
+								Updated bootstrap to latest stable version. Next bootstrap update there will be a built-in dark mode!
+							</li>
 						</ul>
 					</p>
 					<p class="mb-0">
 						Bugfixes
 						<ul>
-							<li></li>
+							<li>NONE!</li>
 						</ul>
 					</p>
 				</div>
