--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			<div class="modal-body">
 				<p>
 					Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a> (Send me a message with feedback or suggestions ;) )<br>
-					Version: <span id="currentappversion">20221221.1</span> <br>
+					Version: <span id="currentappversion">20230106.1</span> <br>
 					Release notes: <a href="https://github.com/Lefky/lefky.github.io/commits/master" target="_blank">Check the master branch on Github</a>
 				</p>
 			</div>
@@ -256,6 +256,10 @@
 								<button class="btn btn-outline-secondary btn-sm" id="exportHistory" onclick="exportHistory()">Export History</button>
 								<a id="exportHistoryLink" class="d-none">Export</a>
 								<input type="file" id="importFile" accept=".json" class="d-none" />
+							</div>
+							<div class="col-sm justify-content-center text-center">
+								<button class="btn btn-outline-secondary btn-sm" id="exportCSV" onclick="exportCSV()">Export as csv<br>(not importable!)</button>
+								<a id="exportCSVLink" class="d-none">Export</a>
 							</div>
 							<div class="col-sm justify-content-center text-center">
 								<button class="btn btn-outline-secondary btn-sm" id="importHistory">Import History</button>
@@ -671,27 +675,18 @@
 						Changes
 						<ul>
 							<li>
-								Added more default break times.
+								The first update of the year...
 							</li>
 							<li>
-								Added a day summary to saved data. This allows for better tracking and to add notes to your registrations.
-							</li>
-							<li>
-								Added a new easter egg when your day is done.
-							</li>
-							<li>
-								Added option to make hourschedule change temporary or permanent.
-							</li>
-							<li>
-								Updated bootstrap to latest stable version. Next bootstrap update there will be a built-in dark mode!
+								Now it's possible to export your data in CSV format. CSV is a more supported format when it comes to data analyzers like spreadsheets so you can make some graphs yourself.<br>
+								Keep in mind that this <b><u>is not a supported type for backups</u></b>!
 							</li>
 						</ul>
 					</p>
 					<p class="mb-0">
 						Bugfixes
 						<ul>
-							<li>Hotfix for records made before the summary field was present.</li>
-							<li>Hotfix for summary field always being show.</li>
+							<li>/</li>
 						</ul>
 					</p>
 				</div>
