Fix footer on small screens overlapping functionality

--- a/index.html
+++ b/index.html
@@ -880,7 +880,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="row d-block d-lg-none">
+		<div class="row d-block d-md-none">
 			<!-- Row to keep clear of footer when using small screens -->
 			<div class="col h-f-100 "></div>
 		</div>
